<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="app_title">WhatsApp</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_contact">View Contact</string>
    <string name="media_links_and_docs">Media, links, and docs</string>
    <string name="search">Search</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="more">More</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="export_chat">Export Chat</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="video_call">Video Call</string>
    <string name="phone_call">Phone Call</string>
    <string name="go_back_to_chats_activity">Go back to Chats Activity</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="settings">Settings</string>
    <string name="type_a_message">Type a message</string>
    <string name="_200"><![CDATA[200>]]></string>
    <string name="custom_notifications">Custom Notifications</string>
    <string name="media_visibility">Media Visibility</string>
    <string name="encryption">Encryption</string>
    <string name="messages_and_calls_are_end_to_end_encrypted_tap_to_verify">Messages and calls are end-to-end encrypted. Tap to verify.</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="this_is_about_me">This is about me.</string>
    <string name="phone_number">+91 8532641764</string>
    <string name="mobile">Mobile</string>
    <string name="about_me">About me.</string>
    <string name="_91_8943616547">+91 8943616547</string>
    <string name="report_contact">Report Contact</string>
    <string name="time_of_call">Time of call</string>
    <string name="my_status">My status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="viewed_updates">Viewed updates</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="view_in_address_book">View in address book</string>
    <string name="verify_security_code">Verify security code</string>
    <string name="name_caller">Name Caller</string>
</resources>