<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/newGroup"
        android:title="@string/new_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/new_broadcast"
        android:title="@string/new_broadcast"
        app:showAsAction="never"/>

    <item
        android:id="@+id/whatsAppWeb"
        android:title="@string/whatsapp_web"
        app:showAsAction="never"/>

    <item
        android:id="@+id/starredMessages"
        android:title="@string/starred_messages"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>