<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abMainBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbNavBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="WhatsApp"
            android:background="@color/darkGreen"
            app:titleTextColor="@color/white"
            app:menu="@menu/chat_screen_menu"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/navButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/textColor"
            android:background="@color/darkGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tbNavBar">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiChats"
                style="@style/TabItemsStyle"
                android:text="@string/chats" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiStatus"
                style="@style/TabItemsStyle"
                android:text="@string/status"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiCalls"
                style="@style/TabItemsStyle"
                android:text="@string/calls"/>

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpFragmentHolder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adjustLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abMainBar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        app:backgroundTint="@color/white"
        android:visibility="invisible"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="@id/fabNormal"
        app:layout_constraintEnd_toEndOf="@id/fabNormal"
        app:layout_constraintStart_toStartOf="@id/fabNormal"
        app:layout_constraintTop_toTopOf="@id/fabNormal"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/lightGreen"
        android:src="@drawable/message_white"
        app:tint="@color/white"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>